Fix with register: 1.1